# ocaml-ci-gitlab

./: .gitignore  .gitmodules  CONTRIBUTING.md  Dockerfile  Dockerfile.web  LICENSE  Procfile  README.md  _opam  deploy.sh  dune  dune-project  heroku.yml  ocaml-ci-gitlab-web.opam  ocaml-ci-gitlab.opam  ocaml-ci-gitlab.opam.locked  stack.yml
.github/workflows/: ci.yaml
lib/: config.ml  dune  ocaml_ci_gitlab.mli
test/: dune  ocaml_ci_gitlab_test.ml
web-ui/: dune  main.ml
