(executable
  (name main)
  (public_name ocaml-ci-gitlab-web)
 (package ocaml-ci-gitlab-web)
  (libraries lwt.unix
             logs.cli
             logs.fmt
             fmt.tty
             current_ansi
             cohttp-lwt-unix
             tyxml
             prometheus-app.unix
             ocaml-ci-api
             capnp-rpc-unix
             yojson
             ppx_deriving_yojson.runtime)
(preprocess (pps ppx_deriving_yojson)))
